// Copyright [2018] [Rafa≈Ç Korepta]
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package korepta.rafal.email.v1alpha1;

option go_package = "email";
option java_multiple_files = true;
option java_outer_classname = "EmailAPI";
option java_package = "com.korepta.rafal.email.v1alpha1";

import "google/api/annotations.proto";

// Email Service allow to send mails through external provider
//
// The request are lowbalanced betweend 2 external SMTP service provider
service EmailService {
    // SendMail
    rpc SendMail (EmailRequest) returns (EmailResponse) {
        option (google.api.http) = {
            post: "/v1alpha1/email"
            body: "*"
        };
    }
}

message EmailRequest {
    string message = 1;
}

message EmailResponse{
    string error = 1;
}